[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "cryptography>=45.0.5",
    "graphviz>=0.21",
    "psutil>=7.0.0",
    "pyjwt>=2.10.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "watchdog>=6.0.0",
]
